@@ -1,3 +1,9 @@
+2008-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (betweenness)
+	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : 
+	add support for weights
+
 2008-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structural.properties.R (betweenness) : added 
